# async_idpot_consensus

./: CMakeLists.txt  README.md  package.xml
launch/: node_id0.launch  node_id1.launch  node_id2.launch
msg/: trigger_data.msg
script/: consensus_node.py  consensus_params.py
