<package>
	<name>async_idpot_consensus</name>
	<version>1.0.0</version>
	<description>
	async_idpot_consensus provides a ROS implementation of different consensus protocols.
	</description>
	<maintainer email="petitti@ba.issia.cnr.it">Antonio Petitti</maintainer>
	<license>BSD</license>

	
	<author>Antonio Petitti</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>rospy</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>

	<run_depend>rospy</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
</package>
